--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -5,6 +5,7 @@ $black:     #333;
         width:33.3%;
         margin:0px 1rem;
         height:30vh;
+        transition:all 1s ease;
     }
     label{
         display:block;
@@ -45,8 +46,26 @@ $black:     #333;
                 mask-position: center;
             }
         }
-        & + input{
-            display: none;
+    }
+    input[type="radio"]{
+        display: none;
+        &:checked + label{
+            background-color:darkgreen;
+            &[for="rock"]{
+                mask:url("../assets/hand-rock-solid.svg");
+                mask-repeat:no-repeat;
+                mask-position: center;
+            }
+            &[for="paper"]{
+                mask:url("../assets/hand-paper-solid.svg");
+                mask-repeat:no-repeat;
+                mask-position: center;
+            }
+            &[for="scissors"]{
+                mask:url("../assets/hand-scissors-solid.svg");
+                mask-repeat:no-repeat;
+                mask-position: center;
+            }
         }
     }
 }
